# 7-segment-SHT-display

./: .gitignore  7seg.c  7ssd.c  7std.c  7std.out  7std.py  CMakeLists.txt  Makefile  README.md  settings-sample.json  test.c  test.py
.cache/clangd/index/: event_loops.c.68496406F1489D11.idx  event_loops.h.3B3986E0E536111C.idx  global_vars.c.E670054F712B285E.idx  global_vars.h.546E726A4CB900B9.idx  main.c.6CF7489E4543CB5B.idx  utils.c.0E5AC45CDA6BA7E3.idx  utils.h.A4B9A269CDA25086.idx
cmake/: compiler-flags.cmake
src/: CMakeLists.txt  callback.h  callback_7seg_display.c  callback_stdout.c  event_loops.c  event_loops.h  global_vars.c  global_vars.h  main.c  module.h  module_common.c  module_dl11_display.c  module_lib.c  module_lib.h  module_t2rh_display.c  module_temp_display.c  module_temp_rh_display.c  utils.c  utils.h
src/modules/: module.h  module_ch_display.c  module_dd_display.c  module_lib.c  module_no_ops.c  module_rpi_ups_hat.c  module_t2rh_display.c  module_temp_rh_display.c
src/modules/ch/: CMakeLists.txt  README.md  ch.c  settings-sample.json
src/modules/dd/: CMakeLists.txt  README.md  consumer.cpp  producer.c  settings-sample.json
src/modules/dd-mqtt/: CMakeLists.txt  README.md  consumer.cpp  producer.c
src/modules/hko/: CMakeLists.txt  README.md  hko.cpp  mqtt-funcs.h  settings-sample.json
src/modules/libs/: 7seg.c  mqtt.c  mqtt.h
src/modules/sample/: CMakeLists.txt  sample.c
